@@ -1,3 +1,11 @@
+2012-10-23  Stefan Monnier  <monnier@iro.umontreal.ca>
+
+	* nndiary.el (nndiary-request-create-group-functions)
+	(nndiary-request-update-info-functions)
+	(nndiary-request-accept-article-functions):
+	* gnus-start.el (gnus-subscribe-newsgroup-functions): Don't use
+	"-hooks" suffix.
+
 2012-10-19  Julien Danjou  <julien@danjou.info>
 
 	* gnus-art.el: Require gnus-util because it uses
